--- a/wp-content/themes/FoundationPress/assets/scss/custom/_page-home.scss
+++ b/wp-content/themes/FoundationPress/assets/scss/custom/_page-home.scss
@@ -75,7 +75,16 @@
 
 }
 .target-group-container{
-	@include grid-column(12);
+	@include breakpoint(small) {
+		@include grid-column(12); @include grid-column-unposition;
+	}
+	@include breakpoint(medium) {
+		@include grid-column(12); @include grid-column-unposition;
+	}
+	@include breakpoint(large) {
+		@include grid-column(8); @include grid-column-position(center);
+	}
+	
 	padding-top:3%;
 
 	.target-groups{
@@ -101,23 +110,14 @@
 		}
 		.teachers{
 			@include breakpoint(small) { @include grid-column(12); }
-			@include breakpoint(large) { @include grid-column(6); }
+			@include breakpoint(medium) { @include grid-column(6); }
 
 			
-		}
-		.students{
-			@include breakpoint(small) { @include grid-column(12); }
-			@include breakpoint(large) { 
-				@include grid-column(4); 
-				border-left: 1px solid $dark-bg;
-				border-right: 1px solid $dark-bg;
-			}
-
 		}
 		.others{
 
 			@include breakpoint(small) { @include grid-column(12); }
-			@include breakpoint(large) { @include grid-column(6);	border-left: 1px solid $dark-bg; }
+			@include breakpoint(medium) { @include grid-column(6);	border-left: 1px solid $dark-bg; }
 		}
 	}
 }
@@ -166,29 +166,6 @@
 
 
 
-// "Teaching at Aalto?" section, i.e. gathering emails for the call for idea proposals
-
-.teaching-container{
-
-	background-color: $light-bg;
-
-	@if ($debug) {background-color:blue;}
-	@include breakpoint(small) {  @include grid-column(12); }
-	@include breakpoint(medium) {  @include grid-column(12); }
-	@include breakpoint(large) {  @include grid-column(4); border-bottom:2px solid $dark-bg; border-top: 2px solid $dark-bg;}
-	@include breakpoint(xlarge) {  @include grid-column(5); }
-	.teaching{
-		@include grid-row();
-		div{
-			@include breakpoint(small only) {  @include grid-column(12); @include grid-column-position(center); border-bottom:1px solid $dark-bg; }
-			@include breakpoint(medium only) {  @include grid-column(10); @include grid-column-position(center);border-bottom:1px solid $dark-bg; }
-			@include breakpoint(large) {  @include grid-column(11); @include grid-column-position(center); }
-			@include breakpoint(xlarge) {  @include grid-column(9); @include grid-column-position(center); }
-		}
-
-	}
-}
-
 
 // "Blog & Events" section, i.e. news section and showcase of next event
 
@@ -196,8 +173,8 @@
 	background-color: $light-bg;
 	@if ($debug) {background-color:green;}
 	@include breakpoint(small) {  @include grid-column(12); }
-	@include breakpoint(medium) {  @include grid-column(12); }
-
+	@include breakpoint(medium) {  @include grid-column(12); @include grid-column-unposition;}
+	@include breakpoint(large) {  @include grid-column(9); @include grid-column-position(center); }
 	h2{
 		border-bottom:1px solid $dark-bg;
 
@@ -212,6 +189,7 @@
 			
 			.see-more{
 				text-align:right;
+				display:inline-block;
 				a {
 					@extend .aole-button;
 				}
@@ -321,7 +299,6 @@
 
 					.aole-news-button{
 						@include grid-column(12,0);
-						a { width:100%; }
 						margin-top:10px;
 					}
 				}
